<resources>
    <string name="app_name">EdgeX</string>
    <string name="header_main">EdgeX</string>
    <string name="header_gestures">Gestures</string>
    <string name="header_freezer">Freezer</string>
    <string name="header_action_selection">Select Action</string>
    <string name="header_shortcut_selection">Select Shortcut</string>
    <string name="header_theme">Theme</string>
    <string name="header_edge_lighting">Edge Lighting</string>
    <string name="header_edge_lighting_app_filter">Edge Lighting Apps</string>
    <string name="menu_gestures">Gestures</string>
    <string name="menu_gestures_desc">Configure edge gesture zones</string>
    <string name="menu_freezer">Freezer</string>
    <string name="menu_freezer_desc">Manage frozen apps</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_theme_desc">Choose an accent color</string>
    <string name="menu_edge_lighting">Edge Lighting</string>
    <string name="menu_edge_lighting_desc">Edge lighting for notifications</string>
    <string name="menu_fluid_effect">Fluid Effect</string>
    <string name="menu_fluid_effect_desc">Elastic edge gesture feedback</string>
    <string name="menu_advanced">Advanced Options</string>
    <string name="menu_debug_matrix">Debug Mode</string>
    <string name="menu_debug_matrix_desc">Show gesture trigger area</string>
    <string name="menu_arc_drawer">Enable Arc Freezer</string>
    <string name="menu_arc_drawer_desc">Display app list in arc on right side</string>
    <string name="menu_haptic_feedback">Haptic Feedback</string>
    <string name="menu_haptic_feedback_desc">Vibrate on action trigger</string>
    <string name="menu_haptic_feedback_desc_with_type">Vibrate on action trigger - %s</string>
    <string name="menu_haptic_feedback_type">Haptic Type</string>
    <string name="haptic_feedback_type_dialog_title">Haptic Type</string>
    <string name="haptic_feedback_type_click">Click</string>
    <string name="haptic_feedback_type_tick">Tick</string>
    <string name="haptic_feedback_type_heavy_click">Heavy click</string>
    <string name="haptic_feedback_type_double_click">Double click</string>
    <string name="menu_restart_sysui">Restart SystemUI</string>
    <string name="menu_premium">Supporter Extras</string>
    <string name="menu_premium_not_activated">Not activated</string>
    <string name="menu_premium_reboot_required">Installed - reboot to take effect</string>
    <string name="menu_premium_installed">Installed</string>
    <string name="header_premium">Supporter Extras</string>
    <string name="premium_section_features">Supporter Extras</string>
    <string name="premium_status_active">Supporter Extras Active</string>
    <string name="premium_status_reboot">Reboot Required</string>
    <string name="premium_desc_not_activated">Supporter Extras includes a few small features for donors, plus some of my less serious ideas that may still be useful.\n\nDonate $3 or more, then email your donation screenshot to fcmfantasy1999@gmail.com. I will reply with an activation code.\n\nIf you donated any amount before May 21, 2026, send that screenshot too.</string>
    <string name="premium_desc_reboot">Reboot your device to enable Supporter Extras</string>
    <string name="premium_code_label">Code: %s</string>
    <string name="premium_deactivate">Unbind</string>
    <string name="premium_deactivate_confirm_title">Unbind Supporter Extras?</string>
    <string name="premium_deactivate_confirm_message">Your activation will be removed from this device. You can re-activate later with the same code.</string>
    <string name="premium_deactivate_success">Supporter Extras deactivated</string>
    <string name="premium_deactivating">Deactivating…</string>
    <string name="premium_activation_title">Activate Supporter Extras</string>
    <string name="premium_activation_message">Enter the activation code from your donation email.</string>
    <string name="premium_activation_hint">Activation code</string>
    <string name="premium_activate">Activate</string>
    <string name="premium_activation_in_progress">Activating…</string>
    <string name="premium_activation_success">Supporter Extras installed. Reboot your phone to enable it.</string>
    <string name="premium_activation_failed">Activation failed: %s</string>
    <string name="premium_activation_error_empty_code">Enter your activation code first.</string>
    <string name="premium_activation_error_already_active">This activation code has already been used. Deactivate it on the other device before activating it here.</string>
    <string name="premium_activation_error_invalid_code">This activation code is invalid. Check the code and try again.</string>
    <string name="premium_activation_error_not_configured">Activation is not configured in this build.</string>
    <string name="premium_activation_error_package_verify">The downloaded package could not be verified. Try again later.</string>
    <string name="premium_activation_error_unsupported_version">This activation package is not compatible with the current app version.</string>
    <string name="premium_activation_error_download">Could not download Supporter Extras. Check your network and try again.</string>
    <string name="premium_activation_error_root">Could not install Supporter Extras. Check root authorization and try again.</string>
    <string name="premium_activation_error_network">Could not reach the activation server. Check your network and try again.</string>
    <string name="premium_activation_error_server">The activation server returned an error. Try again later.</string>
    <string name="premium_update_success">Supporter Extras updated. Reboot your phone to enable it.</string>
    <string name="premium_update_failed">Supporter Extras update failed: %s</string>
    <string name="premium_update_download">Download update</string>
    <string name="premium_update_downloading">Downloading…</string>
    <string name="premium_dex_info">DEX API v%1$d · build %2$s · %3$s</string>
    <string name="premium_dex_update_checking">Checking for DEX updates…</string>
    <string name="premium_dex_update_available">DEX update available: build %s</string>
    <string name="premium_dex_update_up_to_date">DEX is up to date</string>
    <string name="menu_about">About</string>
    <string name="label_author">Author</string>
    <string name="label_project_url">Project URL</string>
    <string name="label_version">Version</string>
    <string name="value_author">fantasy1999</string>
    <string name="value_project_url">github.com/fcmfcm1999/EdgeX</string>
    <string name="value_version">0.1</string>
    <string name="update_new_version_title">New version %s available</string>
    <string name="update_skip_version">Skip this version</string>
    <string name="update_already_latest">Already up to date</string>
    <string name="update_no_changelog">No changelog available.</string>
    <string name="update_checking">Checking for updates…</string>
    <string name="update_view_release">View release</string>
    <string name="label_donate">Tip me</string>
    <string name="label_donate_desc">Buy me more AI token</string>
    <string name="donate_title">Tip me</string>
    <string name="donate_subtitle">Buy me more AI token</string>
    <string name="donate_alipay">Alipay</string>
    <string name="donate_wechat">WeChat Pay</string>
    <string name="donate_kofi">Ko-fi</string>
    <string name="donate_alipay_scan">Scan with Alipay to donate</string>
    <string name="donate_wechat_scan">Scan with WeChat to donate</string>
    <string name="donate_crypto">Crypto</string>
    <string name="donate_crypto_title">Crypto Donation</string>
    <string name="donate_crypto_eth">ETH (Ethereum)</string>
    <string name="donate_crypto_sol">SOL (Solana)</string>
    <string name="donate_crypto_copied">Address copied</string>
    <string name="label_crypto_address">Crypto Address</string>
    <string name="zone_left_top">Top-Left</string>
    <string name="zone_left_mid">Mid-Left</string>
    <string name="zone_left_bottom">Bottom-Left</string>
    <string name="zone_right_top">Top-Right</string>
    <string name="zone_right_mid">Mid-Right</string>
    <string name="zone_right_bottom">Bottom-Right</string>
    <string name="zone_left_full">Left Edge</string>
    <string name="zone_right_full">Right Edge</string>
    <string name="zone_top_left">Left-Top</string>
    <string name="zone_top_mid">Mid-Top</string>
    <string name="zone_top_right">Right-Top</string>
    <string name="zone_top_full">Top Edge</string>
    <string name="zone_bottom_left">Left-Bottom</string>
    <string name="zone_bottom_mid">Mid-Bottom</string>
    <string name="zone_bottom_right">Right-Bottom</string>
    <string name="zone_bottom_full">Bottom Edge</string>
    <string name="zone_low_priority_subtitle">Low Priority</string>
    <string name="zone_left_default_title">Left Zone</string>
    <string name="zone_right_default_title">Right Zone</string>
    <string name="zone_top_default_title">Top Zone</string>
    <string name="zone_bottom_default_title">Bottom Zone</string>
    <string name="gesture_click">Single Tap</string>
    <string name="gesture_double_click">Double Tap</string>
    <string name="gesture_long_press">Long Press</string>
    <string name="gesture_swipe_up">Swipe Up</string>
    <string name="gesture_swipe_down">Swipe Down</string>
    <string name="gesture_swipe_left">Swipe Left</string>
    <string name="gesture_swipe_right">Swipe Right</string>
    <string name="action_none">None</string>
    <string name="action_back">Back</string>
    <string name="action_home">Home</string>
    <string name="action_recents">Recents</string>
    <string name="action_freezer_drawer">Freezer Drawer</string>
    <string name="action_refreeze">Refreeze</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_partial_screenshot">Partial Screenshot</string>
    <string name="partial_screenshot_hint">Drag to select area</string>
    <string name="partial_screenshot_capture">Capture</string>
    <string name="partial_screenshot_cancel">Cancel</string>
    <string name="partial_screenshot_saved">Screenshot saved</string>
    <string name="partial_screenshot_failed">Screenshot failed</string>
    <string name="partial_screenshot_save">Save</string>
    <string name="partial_screenshot_tool_select">Select</string>
    <string name="partial_screenshot_tool_brush">Pen</string>
    <string name="partial_screenshot_tool_mosaic">Mosaic</string>
    <string name="partial_screenshot_undo">Undo</string>
    <string name="action_clipboard">Clipboard</string>
    <string name="action_universal_copy">Global Copy</string>
    <string name="action_lock_screen">Lock Screen</string>
    <string name="action_kill_app">Kill Foreground App</string>
    <string name="action_prev_app">Previous App</string>
    <string name="action_next_app">Next App</string>
    <string name="action_brightness_up">Brightness Up</string>
    <string name="action_brightness_down">Brightness Down</string>
    <string name="action_volume_up">Volume Up</string>
    <string name="action_volume_down">Volume Down</string>
    <string name="action_app_shortcut">App Shortcut</string>
    <string name="action_shell_command">Shell Command</string>
    <string name="hint_search_apps">Search apps…</string>
    <string name="content_desc_icon">Icon</string>
    <string name="header_multi_actions">Saved Multi-Actions</string>
    <string name="header_multi_action_edit">Edit Action Set</string>
    <string name="multi_action_add">Add New</string>
    <string name="multi_action_add_step">Add Action</string>
    <string name="multi_action_empty">No saved multi-actions yet\nTap \"Add New\" to create one</string>
    <string name="multi_action_empty_steps">No steps added yet\nTap \"Add Action\" below</string>
    <string name="edge_lighting_clear_app_filter">Clear app filter</string>
</resources>